# minigst

./: .gitignore  DESCRIPTION  README.md
.github/workflows/: nonreg-TP_python_dev_ubuntu-latest.yml  nonreg-TP_python_ubuntu-latest.yml  nonreg-TP_r_dev_ubuntu-latest.yml  nonreg-TP_r_ubuntu-latest.yml  nonreg-demos-courses_r_ubuntu-latest.yml
R/: DESCRIPTION  Db.R  NAMESPACE  README.md  gaussim.R  kriging.R  likelihood.R  plot.R  vario.R
R/R/: Db.R  vario.R
R/man/: addPoints.Rd  (+21 more)
TP/: 01_gstlearn_start.Rmd  01_gstlearn_start.ipynb  02_Db.Rmd  02_vario_gstlearn_with_solution.Rmd  03_kriging_gstlearn.Rmd  03_kriging_gstlearn_with_solution.Rmd  04_NonStationary_with_solution.Rmd  05_simu_gstlearn_with_solution.Rmd  2024-TP_NonStationary_with_solution.Rmd  2024_TP_kriging_gstlearn_with_solution.Rmd  2024_TP_kriging_gstlearn_with_solution.html  2024_TP_vario_gstlearn_with_solution.Rmd  2024_TP_vario_gstlearn_with_solution.html  2024_Tuto_simu_gstlearn_with_solution.Rmd  2024_Tuto_simu_gstlearn_with_solution.html  TP_krigeage_corrige.Rmd  plt.R  plt_old.R  test_plt.R
data/: ScotlandGrid.RData
man/: addLines.Rd  addVarToDb.Rd  createDbGrid.Rd  createModel.Rd  dbplot_grid.Rd  dbplot_point.Rd  dfToDb.Rd  dot-checkCovParam.Rd  dot-checkIfRegStep.Rd  dot-checkStructNames.Rd  dot-checkVariableNames.Rd  dot-createneigh.Rd  dot-defineColour.Rd  dot-defineFill.Rd  dot-deleteExistingVar.Rd  dot-resetNames.Rd  getAllStruct.Rd  getSeq.Rd  kriging_mean.Rd  minikriging.Rd  minirgrf.Rd  model_fit.Rd  model_getStructNames.Rd  plot_correlation.Rd  plot_hist.Rd  plot_scatter.Rd  plot_vario.Rd  printAllPalettes.Rd  printAllStruct.Rd  rgrf.Rd  setVar.Rd  vario_cloud.Rd  vario_exp.Rd  vario_map.Rd  xvalidation.Rd
python/: .gitignore  API_REFERENCE.md  CONTRIBUTING.md  LICENSE.txt  MANIFEST.in  README.md  R_TO_PYTHON_MAPPING.md  pyproject.toml  setup.py
python/TP/: 01_gstlearn_start.ipynb  02_Db.ipynb  02_Variography_solutions.ipynb  03_Kriging_solutions.ipynb  04_Universal_Kriging.ipynb
python/Tutorials/: 01_gstlearn_start.ipynb  02_Db.ipynb  02_Variography_solutions.ipynb  04_Universal_Kriging.ipynb
python/examples/: basic_example.py  tutorial.ipynb
python/minigst/: __init__.py  db.py  gaussim.py  kriging.py  loadData.py  model.py  plot.py  vario.py
python/minigst/datafiles/Jura/: jura_val_loc.csv
python/minigst/datafiles/Meuse/: README.md
python/run/: build_ipynb_html.sh  run_test_ipynb.py
run/: build_rmd_html.sh  exampleML.R
(+13 files in other folders)
