[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "minigst"
version = "0.1.0"
description = "Wrapper package for gstlearn - Python version"
readme = "README.md"
authors = [
    {name = "Emilie Chautru", email = "emilie.chautru@minesparis.psl.eu"},
    {name = "Mike Pereira", email = "mike.pereira@minesparis.psl.eu"},
    {name = "Thomas Romary", email = "thomas.romary@minesparis.psl.eu"}
]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: BSD",
    "Operating System :: OS Independent",
]
dependencies = [
    "gstlearn==1.9.0",
    "matplotlib>=3.5.0",
    "numpy>=1.20.0",
    "pandas>=1.3.0",
]

[tool.setuptools]
packages = ["minigst"]

[tool.setuptools.package-data]
minigst = ["datafiles/**/*"]

[project.urls]
Homepage = "https://github.com/gstlearn/minigst"
